src/objects/Course_Transfer__c.object
<CustomObject>
    <description>TBD</description>
    <fields>
        <fullName>Credits__c</fullName>
        <description>TBD</description>
        <label>Credits</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>TBD</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Course__c</fullName>
        <description>TBD</description>
        <label>External Course</label>
        <referenceTo>hed__Course__c</referenceTo>
        <relationshipLabel>Course Transfers</relationshipLabel>
        <relationshipName>Course_Transfers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Grade_Requirement__c</fullName>
        <description>TBD</description>
        <label>Grade Requirement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Requirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>TBD</description>
        <label>Plan Requirement</label>
        <referenceTo>hed__Plan_Requirement__c</referenceTo>
        <relationshipLabel>Course Transfers</relationshipLabel>
        <relationshipName>Course_Transfers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>TBD</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>TBD</description>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Matched</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Pending Appeal</fullName>
                </value>
                <value>
                    <fullName>Appeal Denied</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Course Transfer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CT-{000000}</displayFormat>
        <label>Course Transfer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Transfers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>